--- a/config.ini
+++ b/config.ini
@@ -8,5 +8,6 @@ media_ml_per_second=1.3517
 waste_ml_per_second=1.2893
 
 
-[ir_sampling]
+[od_sampling]
 samples_per_second=150
+mqtt_publish_rate=100
