--- a/config.ini
+++ b/config.ini
@@ -10,5 +10,9 @@ waste_ml_per_second=1.2893
 
 
 [od_sampling]
-samples_per_second=150
-mqtt_publish_rate=100
+samples_per_second=10
+mqtt_publish_rate=5
+
+
+[data]
+observation_database=/home/pi/db/morbidostat.sql
