--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ alt_media1=22
 [pump_calibration]
 media_ml_per_second=1.3517
 waste_ml_per_second=1.2893
+alt_media_ml_per_second=None
 
 
 [od_sampling]
