--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,9 @@ alt_media1=22
 
 
 [pump_calibration]
-media_ml_per_second=1.3517
-waste_ml_per_second=1.2893
-alt_media_ml_per_second=None
+media_ml_calibraton=[1.98, -0.0683]
+waste_ml_calibraton=[-1.32, -0.0367]
+alt_media_ml_calibration=[1.43, 0.0053]
 
 
 [od_sampling]
