--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ alt_media1=22
 
 
 [pump_calibration]
-media_ml_calibraton=[1.98, -0.0683]
-waste_ml_calibraton=[-1.32, -0.0367]
+media_ml_calibration=[1.98, -0.0683]
+waste_ml_calibration=[-1.32, -0.0367]
 alt_media_ml_calibration=[1.43, 0.0053]
 
 
