--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,9 @@ alt_media1=22
 
 
 [pump_calibration]
-media_ml_calibration=[1.24, 0.]
-waste_ml_calibration=[1.36, 0.]
-alt_media_ml_calibration=[1.36, 0.]
+media_ml_calibration=[1.24, 0.0]
+waste_ml_calibration=[1.36, 0.0]
+alt_media_ml_calibration=[1.36, 0.0]
 
 
 [od_sampling]
