rename monitoring; try a io_listening.py for helping to compute and retain state

--- a/config.ini
+++ b/config.ini
@@ -5,15 +5,16 @@ alt_media1=22
 
 
 [pump_calibration]
-media_ml_calibration=[1.24, 0.0]
-waste_ml_calibration=[1.36, 0.0]
-alt_media_ml_calibration=[1.36, 0.0]
+media1_ml_calibration=[1.24, 0.0]
+waste1_ml_calibration=[1.36, 0.0]
+alt_media1_ml_calibration=[1.36, 0.0]
 
 
 [od_sampling]
 samples_per_second=1
 
-[adc_to_sensor]
+[od_adc_channels_and_angle_pairs]
+135=0
 
 
 
