--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,12 @@ media2_ml_calibration=[1.24, 0.0]
 waste2_ml_calibration=[1.36, 0.0]
 alt_media2_ml_calibration=[1.36, 0.0]
 
+media0_ml_calibration=[1.0, 0.0]
+waste0_ml_calibration=[1.0, 0.0]
+alt_media0_ml_calibration=[1.0, 0.0]
+
+
+
 
 [od_sampling]
 samples_per_second=0.2
