duration in pumps

--- a/config.ini
+++ b/config.ini
@@ -10,10 +10,15 @@ media2_ml_calibration={"dc_": 0.4582, "duration_": 0.9756, "intercept_": -1.7805
 waste2_ml_calibration={"dc_": 0.5191, "duration_": 1.0639, "intercept_":-2.1785}
 alt_media2_ml_calibration={"dc_": 0.5432, "duration_": 1.0230, "intercept_":-2.2827}
 
+media1_ml_calibration={"dc_": 0.4582, "duration_": 0.9756, "intercept_": -1.7805}
+waste1_ml_calibration={"dc_": 0.5191, "duration_": 1.0639, "intercept_":-2.1785}
+alt_media1_ml_calibration={"dc_": 0.5432, "duration_": 1.0230, "intercept_":-2.2827}
+
+
+# testing
 media_testing_ml_calibration={"dc_": 1, "duration_": 1, "intercept_": 0}
 waste_testing_ml_calibration={"dc_": 1, "duration_": 1, "intercept_": 0}
 alt_media_testing_ml_calibration={"dc_": 1, "duration_": 1, "intercept_": 0}
-
 
 
 [od_sampling]
