--- a/config.ini
+++ b/config.ini
@@ -22,6 +22,13 @@ waste_testing_ml_calibration={"dc_": 1, "duration_": 1, "intercept_": 0}
 alt_media_testing_ml_calibration={"dc_": 1, "duration_": 1, "intercept_": 0}
 
 
+[stirring]
+duty_cycle1=50
+duty_cycle2=50
+duty_cycle3=50
+duty_cycle_testing=50
+
+
 [od_sampling]
 samples_per_second=0.2
 
