--- a/config.ini
+++ b/config.ini
@@ -24,8 +24,10 @@ alt_media_testing_ml_calibration={"dc_": 1, "duration_": 1, "intercept_": 0}
 
 [stirring]
 duty_cycle1=35
-duty_cycle2=20
+duty_cycle2=15
 duty_cycle3=-1
+
+# testing
 duty_cycle_testing=50
 
 
