--- a/config.ini
+++ b/config.ini
@@ -30,6 +30,11 @@ duty_cycle3=-1
 # testing
 duty_cycle_testing=50
 
+[od_config]
+# Defaults. Can be overwritten when invoking od_reading.py
+od_sensor1=135,0
+od_sensor2=135,3
+
 
 [od_sampling]
 samples_per_second=0.2
