--- a/startup/systemd/morbidostat.service
+++ b/startup/systemd/morbidostat.service
@@ -4,7 +4,7 @@ Description=In case of an RPi power-cycle mid-experiment, start up the important
 [Service]
 User=pi
 WorkingDirectory=/home/pi/morbidostat
-ExecStart=mb stirring -b && mb growth_rate_calculating -b && mb od_reading -b
+ExecStart=mb od_reading -b
 Restart=always
 
 [Install]
