--- a/startup/systemd/morbidostat.service
+++ b/startup/systemd/morbidostat.service
@@ -4,9 +4,10 @@ Description=In case of an RPi power-cycle mid-experiment, start up the important
 [Service]
 User=pi
 WorkingDirectory=/home/pi/morbidostat
-ExecStart=mb od_reading -b
-Restart=always
+ExecStart=/usr/bin/python3 /usr/local/bin/mb od_reading -b
+Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
+KillMode=none
 
 [Install]
 WantedBy=multi-user.target
