--- a/startup/systemd/morbidostat.service
+++ b/startup/systemd/morbidostat.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=In case of an RPi power-cycle mid-experiment, start up the important services again.
+Wants=network-online.target
+After=network-online.target
 
 [Service]
 User=pi
