--- a/startup/systemd/od_reading.service
+++ b/startup/systemd/od_reading.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=In case of an RPi power-cycle mid-experiment, start up the important services again.
+Description=In case of an RPi power-cycle mid-experiment, start up OD reading.
 Wants=network-online.target
 After=network-online.target
 
