change how setting is done across MQTT

--- a/morbidostat/config.ini
+++ b/morbidostat/config.ini
@@ -17,9 +17,9 @@ waste1_ml_calibration={"duration_": 0.5600}
 alt_media1_ml_calibration={"duration_": 0.6674}
 
 # testing
-media_testing_ml_calibration={"duration_": 1}
-waste_testing_ml_calibration={"duration_": 1}
-alt_media_testing_ml_calibration={"duration_": 1}
+media_testing_unit_ml_calibration={"duration_": 1}
+waste_testing_unit_ml_calibration={"duration_": 1}
+alt_media_testing_unit_ml_calibration={"duration_": 1}
 
 
 [stirring]
@@ -28,7 +28,7 @@ duty_cycle2=15
 duty_cycle3=-1
 
 # testing
-duty_cycle_testing=50
+duty_cycle_testing_unit=50
 
 [od_config]
 # Defaults. Can be overwritten when invoking od_reading.py
