--- a/ui/src/data/config.json
+++ b/ui/src/data/config.json
@@ -12,19 +12,19 @@
     "media1_ml_calibration": "{\"duration_\": 0.6644}",
     "waste1_ml_calibration": "{\"duration_\": 0.5600}",
     "alt_media1_ml_calibration": "{\"duration_\": 0.6674}",
-    "media_testing_ml_calibration": "{\"duration_\": 1}",
-    "waste_testing_ml_calibration": "{\"duration_\": 1}",
-    "alt_media_testing_ml_calibration": "{\"duration_\": 1}"
+    "media_testing_unit_ml_calibration": "{\"duration_\": 1}",
+    "waste_testing_unit_ml_calibration": "{\"duration_\": 1}",
+    "alt_media_testing_unit_ml_calibration": "{\"duration_\": 1}"
   },
   "stirring": {
-    "duty_cycle1": "30",
-    "duty_cycle2": "15",
-    "duty_cycle3": "30",
-    "duty_cycle_testing": "50"
+    "duty_cycle1": "24",
+    "duty_cycle2": "13",
+    "duty_cycle3": "24",
+    "duty_cycle_testing_unit": "50"
   },
   "od_config": {
     "od_sensor1": "135,0",
-    "od_sensor2": "135,3"
+    "od_sensor2": "90,3"
   },
   "od_sampling": {
     "samples_per_second": "0.2"
