--- a/ui/package.json
+++ b/ui/package.json
@@ -8,15 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.2",
-    "csvtojson": "^2.0.10",
+    "express-basic-auth": "^1.2.0",
     "moment": "^2.29.1",
-    "mqtt": "^4.2.1",
     "paho-mqtt": "^1.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-papaparse": "^3.8.0",
     "react-scripts": "3.4.3",
     "victory": "^35.3.0"
   },
