--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,9 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sqlite3": "^5.0.0",
     "victory": "^35.3.0"
   },
   "scripts": {
