--- a/morbidostat/config.ini
+++ b/morbidostat/config.ini
@@ -53,3 +53,10 @@ observation_database=/home/pi/db/morbidostat.sql
 
 [network]
 leader_hostname=leader
+
+
+[dashboard_logs]
+display_count=50
+
+[charts]
+lookback=5h
