--- a/startup/systemd/ngrok.yml
+++ b/startup/systemd/ngrok.yml
@@ -3,7 +3,14 @@ tunnels:
   ssh:
     proto: tcp
     addr: 22
-  http:
+  nodered:
     proto: http
-    region: ap
     addr: 1880
+  ui:
+    proto: http
+    addr: 9000
+    subdomain: morbidostat
+  ws:
+    proto: http
+    addr: 9001
+    subdomain: morbidostatws
