whole lot; mainly: mqtt to db job

--- a/morbidostat/config.ini
+++ b/morbidostat/config.ini
@@ -57,8 +57,6 @@ observation_database=/home/pi/db/morbidostat.sql
 leader_hostname=leader
 
 
-[dashboard_logs]
-display_count=50
-
-[charts]
+[dashboard]
 lookback=5h
+log_display_count=50
