--- a/morbidostat/config.ini
+++ b/morbidostat/config.ini
@@ -1,7 +1,8 @@
 [rpi_pins]
 
-# 18 on unit 3
+# 18 on unit 3, 2
 media=22
+
 waste=27
 alt_media=17
 fan=4
@@ -32,9 +33,9 @@ alt_media_testing_unit_ml_calibration={"duration_": 1}
 
 
 [stirring]
-duty_cycle1=24
-duty_cycle2=13
-duty_cycle3=30
+duty_cycle1=25
+duty_cycle2=14
+duty_cycle3=31
 
 # testing
 duty_cycle_testing_unit=50
