introduce subjobs, and set_ methods

--- a/morbidostat/config.ini
+++ b/morbidostat/config.ini
@@ -59,5 +59,6 @@ leader_hostname=leader
 
 
 [dashboard]
-lookback=5h
-log_display_count=50
+filtered_lookback_minutes=240
+raw_lookback_minutes=240
+log_display_count=65
