--- a/morbidostat/config.ini
+++ b/morbidostat/config.ini
@@ -31,7 +31,8 @@ media_testing_unit_ml_calibration={"duration_": 1}
 waste_testing_unit_ml_calibration={"duration_": 1}
 alt_media_testing_unit_ml_calibration={"duration_": 1}
 
-
+[bioreactor]
+volume_ml=14
 
 [stirring]
 duty_cycle1=26
@@ -46,12 +47,10 @@ duty_cycle_testing_unit=50
 od_sensor1=135,0
 od_sensor2=135,3
 
-
-[od_sampling]
 samples_per_second=0.2
 
 
-[data]
+[storage]
 observation_database=/home/pi/db/morbidostat.sql
 
 
@@ -63,3 +62,8 @@ leader_hostname=leader
 filtered_lookback_minutes=240
 raw_lookback_minutes=240
 log_display_count=65
+
+[pid_morbidostat]
+Kp=5
+Ki=0
+Kd=0
