--- a/config.dev.ini
+++ b/config.dev.ini
@@ -26,7 +26,7 @@ samples_per_second=0.2
 
 
 [storage]
-observation_database=/home/pi/db/morbidostat.sql
+observation_database=pioreactor.sqlite3
 
 
 [network]
