--- a/startup/systemd/growth_rate_calculating.service
+++ b/startup/systemd/growth_rate_calculating.service
@@ -5,8 +5,7 @@ After=network-online.target
 
 [Service]
 User=pi
-WorkingDirectory=/home/pi/morbidostat
-ExecStart=mb growth_rate_calculating -b
+ExecStart=pio growth_rate_calculating -b
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
 KillMode=none
