--- a/startup/systemd/time_series_aggregating.service
+++ b/startup/systemd/time_series_aggregating.service
@@ -5,8 +5,7 @@ After=network-online.target
 
 [Service]
 User=pi
-WorkingDirectory=/home/pi/morbidostat
-ExecStart=mb time_series_aggregating -b
+ExecStart=pio time_series_aggregating -b
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
 KillMode=none
