test new log append permissions

--- a/startup/systemd/mqtt_to_db_streaming.service
+++ b/startup/systemd/mqtt_to_db_streaming.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 User=pi
-ExecStart=pio mqtt_to_db_streaming -b
+ExecStart=pio run mqtt_to_db_streaming -b
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
 KillMode=none
