test new log append permissions

--- a/config.ini
+++ b/config.ini
@@ -44,7 +44,7 @@ samples_per_second=0.2
 
 
 [storage]
-observation_database=~/.pioreactor.sqlite3
+observation_database=/home/pi/db/pioreactor.sqlite
 
 
 [network]
