--- a/config.ini
+++ b/config.ini
@@ -35,11 +35,12 @@ duty_cycle2=14
 duty_cycle3=31
 
 
-[od_config]
+[od_sensor_config]
 # Defaults. Can be overwritten when invoking od_reading.py
 od_sensor1=135,0
 od_sensor2=135,3
 
+[od_sampling]
 samples_per_second=0.2
 
 
