--- a/config.ini
+++ b/config.ini
@@ -35,7 +35,7 @@ duty_cycle2=14
 duty_cycle3=31
 
 
-[od_sensor_config]
+[od_config]
 # Defaults. Can be overwritten when invoking od_reading.py
 od_sensor1=135,0
 od_sensor2=135,3
