--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,6 @@ waste=27
 alt_media=17
 fan=4
 
-
 [pump_calibration]
 
 # https://docs.google.com/spreadsheets/d/1EUQPh2L-iafGORMWgPbMKVklv_nSb-UOtcX6c76CYm0/edit?usp=sharing
@@ -25,7 +24,6 @@ media3_ml_calibration={"duration_": 0.6871}
 waste3_ml_calibration={"duration_": 0.7512}
 alt_media3_ml_calibration={"duration_": 0.7013}
 
-
 [bioreactor]
 volume_ml=14
 
@@ -34,23 +32,20 @@ duty_cycle1=26
 duty_cycle2=14
 duty_cycle3=31
 
-
 [od_config]
-# Defaults. Can be overwritten when invoking od_reading.py
+# Defaults. Can be overwritten when invoking `pio run od_reading` with kwarg `--od-angle-channel`
 od_sensor1=135,0
 od_sensor2=135,3
 
 [od_sampling]
 samples_per_second=0.2
 
-
 [storage]
+# the UI looks here, too.
 observation_database=/home/pi/db/pioreactor.sqlite
-
 
 [network]
 leader_hostname=leader
-
 
 [dashboard]
 filtered_lookback_minutes=240
