--- a/config.dev.ini
+++ b/config.dev.ini
@@ -29,6 +29,8 @@ samples_per_second=0.2
 [storage]
 observation_database=pioreactor.sqlite3
 
+[logging]
+log_file=./pioreactor.log
 
 [network]
 leader_hostname=localhost
