--- a/config.ini
+++ b/config.ini
@@ -22,6 +22,9 @@ samples_per_second=0.2
 # the UI looks here, too.
 observation_database=/home/pi/db/pioreactor.sqlite
 
+[logging]
+log_file=/var/log/pioreactor.log
+
 [network]
 leader_hostname=leader
 
