debugging why my clients keep getting lost

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -32,7 +32,7 @@ observation_database=pioreactor.sqlite3
 [logging]
 log_file=./pioreactor.log
 
-[network]
+[topology]
 leader_hostname=localhost
 
 
