--- a/config.ini
+++ b/config.ini
@@ -25,8 +25,16 @@ observation_database=/home/pi/db/pioreactor.sqlite
 [logging]
 log_file=/var/log/pioreactor.log
 
-[network]
+[topology]
+# assign a unit to be the leader. In solo mode, this can pioreactor1
 leader_hostname=leader
+
+[network]
+# leader key can be removed if in solo mode.
+leader=192.168.0.10
+pioreactor1=192.168.0.17
+pioreactor2=192.168.0.20
+pioreactor3=192.168.0.18
 
 [dashboard]
 filtered_lookback_minutes=240
