adding worker watch dog service

--- a/config.ini
+++ b/config.ini
@@ -26,15 +26,19 @@ observation_database=/home/pi/db/pioreactor.sqlite
 log_file=/var/log/pioreactor.log
 
 [topology]
-# assign a unit to be the leader. In solo mode, this can pioreactor1
+# assign a unit to be the leader. This should be a hostname in [network]
+# In solo mode, this can pioreactor1
 leader_hostname=leader
+
+[watchdog]
+email_alerts_to=cam.davidson.pilon@gmail.com
+
 
 [network]
 # leader key can be removed if in solo mode.
 leader=192.168.0.10
 pioreactor1=192.168.0.17
 pioreactor2=192.168.0.20
-pioreactor3=192.168.0.18
 
 [dashboard]
 filtered_lookback_minutes=240
