--- a/startup/systemd/growth_rate_calculating.service
+++ b/startup/systemd/growth_rate_calculating.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 User=pi
-ExecStart=pio run growth_rate_calculating -b
+ExecStart=pio run growth_rate_calculating
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
 KillMode=none
