new config stuff

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -17,12 +17,12 @@ volume_ml=14
 [stirring]
 duty_cycle_testing_unit=50
 
-[od_config]
+[od_config.sensor_to_adc_pin]
 # Defaults. Can be overwritten when invoking od_reading.py
 od_sensor1=135,0
 od_sensor2=135,3
 
-[od_sampling]
+[od_config.od_sampling]
 samples_per_second=0.2
 
 
@@ -32,14 +32,31 @@ observation_database=pioreactor.sqlite3
 [logging]
 log_file=./pioreactor.log
 
-[topology]
+[network.topology]
 leader_hostname=localhost
 
+[network.ips]
+leader=192.168.0.100
+pioreactor1=192.168.0.1
+pioreactor2=192.168.0.2
+pioreactor3=192.168.0.3
+pioreactor4=192.168.0.4
 
-[dashboard]
-filtered_lookback_minutes=240
-raw_lookback_minutes=240
+
+[inventory]
+pioreactor1=1
+pioreactor2=1
+pioreactor3=0
+
+
+[dashboard.settings]
+filtered_od_lookback_minutes=240
+raw__od_lookback_minutes=240
 log_display_count=65
+
+[dashboard.rename]
+1=experiment
+2=control
 
 [pid_morbidostat]
 Kp=5
