--- a/config.ini
+++ b/config.ini
@@ -10,12 +10,12 @@ volume_ml=14
 
 [stirring]
 
-[od_config]
-# Defaults. Can be overwritten when invoking `pio run od_reading` with kwarg `--od-angle-channel`
+[od_config.sensor_to_adc_pin]
+# Defaults. Can be overwritten when invoking od_reading.py
 od_sensor1=135,0
 od_sensor2=135,3
 
-[od_sampling]
+[od_config.od_sampling]
 samples_per_second=0.2
 
 [storage]
@@ -25,27 +25,46 @@ observation_database=/home/pi/db/pioreactor.sqlite
 [logging]
 log_file=/var/log/pioreactor.log
 
-[topology]
-# assign a unit to be the leader. This should be a hostname in [network]
-# In solo mode, this can pioreactor1
+[network.topology]
+# should be a hostname defined in [network.ips]
+# In solo mode, this can be pioreactor1, for example
 leader_hostname=leader
 
-[watchdog]
-email_alerts_to=cam.davidson.pilon@gmail.com
+[network.ips]
+leader=192.168.0.100
+pioreactor1=192.168.0.1
+pioreactor2=192.168.0.2
+pioreactor3=192.168.0.3
+pioreactor4=192.168.0.4
 
 
-[network]
-# leader key can be removed if in solo mode.
-leader=192.168.0.10
-pioreactor1=192.168.0.17
-pioreactor2=192.168.0.20
+[inventory]
+# This controls what's available to be used as workers, i.e. what `pios` will talk to.
+# This also controls what shows up in the dashboard as active
+# a 1 means available, and a 0 means not available.
+pioreactor1=1
+pioreactor2=1
+pioreactor3=0
+pioreactor4=0
 
-[dashboard]
-filtered_lookback_minutes=240
-raw_lookback_minutes=240
+[dashboard.settings]
+# changing these requires a power cycle of the leader unit.
+filtered_od_lookback_minutes=240
+raw__od_lookback_minutes=240
 log_display_count=65
+
+[dashboard.rename]
+# rename the units on the dashboard
+1=medium
+2=high
+3=low
+4=control
 
 [pid_morbidostat]
 Kp=5
 Ki=0
 Kd=0
+
+
+[watchdog]
+email_alerts_to=cam.davidson.pilon@gmail.com
