remove 3d prints (new repo)

--- a/config.ini
+++ b/config.ini
@@ -35,7 +35,6 @@ leader=192.168.0.100
 pioreactor1=192.168.0.1
 pioreactor2=192.168.0.2
 pioreactor3=192.168.0.3
-pioreactor4=192.168.0.4
 
 
 [inventory]
@@ -44,20 +43,20 @@ pioreactor4=192.168.0.4
 # a 1 means available, and a 0 means not available.
 pioreactor1=1
 pioreactor2=1
-pioreactor3=0
+pioreactor3=1
 pioreactor4=0
 
 [dashboard.settings]
 # changing these requires a power cycle of the leader unit.
 filtered_od_lookback_minutes=240
-raw__od_lookback_minutes=240
+raw_od_lookback_minutes=240
 log_display_count=65
 
 [dashboard.rename]
 # rename the units on the dashboard
+# ideally 6 or fewer characters to show up well on the legend
 1=medium
 2=high
-3=low
 4=control
 
 [pid_morbidostat]
