abstract out how to disconnect

--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,7 @@ volume_ml=14
 
 [od_config.sensor_to_adc_pin]
 # Defaults. Can be overwritten when invoking od_reading.py
-od_sensor1=135,0
-od_sensor2=135,3
+od_angle_channel=135,0|135,3
 
 [od_config.od_sampling]
 samples_per_second=0.2
@@ -52,9 +51,15 @@ filtered_od_lookback_minutes=240
 raw_od_lookback_minutes=240
 log_display_count=65
 
+[dashboard.charts]
+implied_growth_rate=1
+fraction_of_volume_that_is_alternative_media=1
+normalized_135_optical_density=1
+raw_135_optical_density=1
+
 [dashboard.rename]
 # rename the units on the dashboard
-# ideally 6 or fewer characters to show up well on the legend
+# ideally 6 or fewer characters to show up well in the legend
 
 [pid_morbidostat]
 Kp=5
