--- a/config.dev.ini
+++ b/config.dev.ini
@@ -18,9 +18,7 @@ volume_ml=14
 duty_cycle_testing_unit=50
 
 [od_config.sensor_to_adc_pin]
-# Defaults. Can be overwritten when invoking od_reading.py
-od_sensor1=135,0
-od_sensor2=135,3
+od_angle_channel=135,0
 
 [od_config.od_sampling]
 samples_per_second=0.2
