--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,9 @@ volume_ml=14
 [stirring]
 
 [od_config.sensor_to_adc_pin]
-# Defaults. Can be overwritten when invoking od_reading.py
+# Defaults. Use a | character to separate them, ex: 135,0|135,3
+# Can be overwritten when invoking od_reading job as well,
+# ex: pio run od_reading --od-angle-channel 135,0 --od-angle-channel 135,3
 od_angle_channel=135,0|135,3
 
 [od_config.od_sampling]
