fix sqlite setup

--- a/config.ini
+++ b/config.ini
@@ -62,6 +62,10 @@ raw_135_optical_density=1
 [dashboard.rename]
 # rename the units on the dashboard
 # ideally 6 or fewer characters to show up well in the legend
+1=test
+2=trial
+3=medium
+4=dev
 
 [pid_morbidostat]
 Kp=5
