set names to be hostnames, not numbers

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -7,9 +7,9 @@ fan=4
 
 [pump_calibration]
 
-media_testing_unit_ml_calibration={"duration_": 1}
-waste_testing_unit_ml_calibration={"duration_": 1}
-alt_media_testing_unit_ml_calibration={"duration_": 1}
+media_ml_calibration_testing_unit={"duration_": 1}
+waste_ml_calibration_testing_unit={"duration_": 1}
+alt_media_ml_calibration_testing_unit={"duration_": 1}
 
 [bioreactor]
 volume_ml=14
@@ -53,8 +53,8 @@ raw__od_lookback_minutes=240
 log_display_count=65
 
 [dashboard.rename]
-1=experiment
-2=control
+pioreactor1=experiment
+pioreactor2=control
 
 [pid_morbidostat]
 Kp=5
