--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ log_file=/var/log/pioreactor.log
 
 [network.topology]
 # should be a hostname defined in [network.ips]
-# In solo mode, this can be pioreactor1, for example
+# In solo mode, this can be pioreactor1 (as an example)
 leader_hostname=leader
 
 [network.ips]
@@ -46,6 +46,14 @@ pioreactor1=1
 pioreactor2=1
 pioreactor3=1
 pioreactor4=1
+pioreactor5=1
+pioreactor6=1
+pioreactor7=1
+pioreactor8=1
+pioreactor9=1
+pioreactor10=1
+pioreactor11=1
+pioreactor12=1
 
 [dashboard.settings]
 # changing these requires a power cycle of the leader unit.
@@ -62,10 +70,7 @@ raw_135_optical_density=1
 [dashboard.rename]
 # rename the units on the dashboard
 # ideally 6 or fewer characters to show up well in the legend
-1=test
-2=trial
-3=medium
-4=dev
+
 
 [pid_morbidostat]
 Kp=5
