move od normalization in gr job; script to download ui without git

--- a/config.ini
+++ b/config.ini
@@ -29,31 +29,20 @@ log_file=/var/log/pioreactor.log
 [network.topology]
 # should be a hostname defined in [network.ips]
 # In solo mode, this can be pioreactor1 (as an example)
-leader_hostname=leader
+# See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
+leader_hostname=pioreactor1
 
 [network.ips]
-leader=192.168.0.100
 pioreactor1=192.168.0.1
-pioreactor2=192.168.0.2
-pioreactor3=192.168.0.3
 
 
 [inventory]
 # This controls what's available to be used as workers, i.e. what `pios` will talk to.
 # This also controls what shows up in the dashboard as active
 # a 1 means available, and a 0 means not available.
+# See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 pioreactor1=1
-pioreactor2=1
-pioreactor3=1
-pioreactor4=1
-pioreactor5=1
-pioreactor6=1
-pioreactor7=1
-pioreactor8=1
-pioreactor9=1
-pioreactor10=1
-pioreactor11=1
-pioreactor12=1
+
 
 [dashboard.settings]
 # changing these requires a power cycle of the leader unit.
