--- a/config.ini
+++ b/config.ini
@@ -42,7 +42,9 @@ pioreactor1=192.168.0.1
 # a 1 means available, and a 0 means not available.
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 pioreactor1=1
-
+pioreactor2=1
+pioreactor3=1
+pioreactor4=0
 
 [dashboard.settings]
 # changing these requires a power cycle of the leader unit.
@@ -51,6 +53,8 @@ raw_od_lookback_minutes=240
 log_display_count=65
 
 [dashboard.charts]
+# show/hide charts on the PioreactorUI dashboard
+# 1 is show, 0 is hide
 implied_growth_rate=1
 fraction_of_volume_that_is_alternative_media=1
 normalized_135_optical_density=1
@@ -66,6 +70,10 @@ Kp=5
 Ki=0
 Kd=0
 
+[pid_turbidostat]
+Kp=3
+Ki=0.1
+Kd=0.1
 
 [watchdog]
 email_alerts_to=cam.davidson.pilon@gmail.com
