new pio CLI leader commands, and bug fixes

--- a/config.ini
+++ b/config.ini
@@ -45,15 +45,16 @@ pioreactor1=192.168.0.1
 pioreactor1=1
 pioreactor2=1
 pioreactor3=1
-pioreactor4=0
+pioreactor4=1
+pioreactor5=0
 
-[dashboard.settings]
+[ui.overview.settings]
 # changing these requires a power cycle of the leader unit.
 filtered_od_lookback_minutes=240
 raw_od_lookback_minutes=240
 log_display_count=65
 
-[dashboard.charts]
+[ui.overview.charts]
 # show/hide charts on the PioreactorUI dashboard
 # 1 is show, 0 is hide
 implied_growth_rate=1
@@ -61,10 +62,14 @@ fraction_of_volume_that_is_alternative_media=1
 normalized_135_optical_density=1
 raw_135_optical_density=1
 
-[dashboard.rename]
-# rename the units on the dashboard
-# ideally 6 or fewer characters to show up well in the legend
+[ui.overview.cards]
+dosings=1
 
+[ui.overview.rename]
+# rename the units on the dashboard
+# ideally 8 or fewer characters to show up well in the legend
+pioreactor1=high
+pioreactor3=medium
 
 [pid_morbidostat]
 Kp=5
