--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,11 @@ samples_per_second=0.2
 observation_database=/home/pi/db/pioreactor.sqlite
 
 [logging]
+# where, on each Rpi, to store the logs
 log_file=/var/log/pioreactor.log
+
+# logs in MQTT end up in the database and on the UI
+mqtt_log_level="INFO"
 
 [network.topology]
 # should be a hostname defined in [network.ips]
@@ -49,7 +53,7 @@ pioreactor4=1
 pioreactor5=0
 
 [ui.overview.settings]
-# changing these requires a power cycle of the leader unit.
+# changing these may require a power cycle of the leader unit.
 filtered_od_lookback_minutes=240
 raw_od_lookback_minutes=240
 log_display_count=65
@@ -63,6 +67,8 @@ normalized_135_optical_density=1
 raw_135_optical_density=1
 
 [ui.overview.cards]
+# show/hide cards on the PioreactorUI dashboard
+# 1 is show, 0 is hide
 dosings=1
 
 [ui.overview.rename]
