--- a/config.ini
+++ b/config.ini
@@ -29,7 +29,8 @@ observation_database=/home/pi/db/pioreactor.sqlite
 log_file=/var/log/pioreactor.log
 
 # logs in MQTT end up in the database and on the UI
-mqtt_log_level="INFO"
+# See Python's logging module for possible values
+mqtt_log_level=INFO
 
 [network.topology]
 # should be a hostname defined in [network.ips]
@@ -47,9 +48,9 @@ pioreactor1=192.168.0.1
 # a 1 means available, and a 0 means not available.
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 pioreactor1=1
-pioreactor2=1
+pioreactor2=0
 pioreactor3=1
-pioreactor4=1
+pioreactor4=0
 pioreactor5=0
 
 [ui.overview.settings]
@@ -70,6 +71,7 @@ raw_135_optical_density=1
 # show/hide cards on the PioreactorUI dashboard
 # 1 is show, 0 is hide
 dosings=1
+event_logs=1
 
 [ui.overview.rename]
 # rename the units on the dashboard
