fix dissapearing config bug

--- a/config.ini
+++ b/config.ini
@@ -41,6 +41,7 @@ leader_hostname=pioreactor1
 
 [network.ips]
 pioreactor1=192.168.0.1
+pioreactor2=192.168.0.2
 
 
 [inventory]
@@ -49,6 +50,7 @@ pioreactor1=192.168.0.1
 # a 1 means available, and a 0 means not available.
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 pioreactor1=1
+pioreactor2=1
 
 
 [ui.overview.settings]
@@ -86,3 +88,7 @@ Kd=0
 Kp=3
 Ki=0.1
 Kd=0.1
+
+
+[remote]
+ws_url=pioreactorws.ngrok.io
