right, so I have to use MQTT to communicate between workers and leaders. The wworkers don't have access to the ddb

--- a/config.ini
+++ b/config.ini
@@ -50,8 +50,8 @@ pioreactor2=192.168.0.2
 # a 1 means available, and a 0 means not available.
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 pioreactor1=1
-pioreactor2=1
-
+pioreactor2=0
+pioreactor3=1
 
 [ui.overview.settings]
 # changing these may require a power cycle of the leader unit.
@@ -91,4 +91,4 @@ Kd=0.1
 
 
 [remote]
-ws_url=eyl.ws.pioreactor.com.ngrok.io
+ws_url=dev.ws.pioreactor.com
