--- a/config.ini
+++ b/config.ini
@@ -53,6 +53,7 @@ pioreactor1=1
 pioreactor2=0
 pioreactor3=1
 
+
 [ui.overview.settings]
 # changing these may require a power cycle of the leader unit.
 filtered_od_lookback_minutes=240
@@ -64,8 +65,8 @@ log_display_count=65
 # 1 is show, 0 is hide
 implied_growth_rate=1
 fraction_of_volume_that_is_alternative_media=1
-normalized_135_optical_density=1
-raw_135_optical_density=1
+normalized_optical_density=1
+raw_optical_density=1
 
 [ui.overview.cards]
 # show/hide cards on the PioreactorUI dashboard
@@ -76,8 +77,8 @@ event_logs=1
 [ui.overview.rename]
 # rename the units on the dashboard
 # ideally 8 or fewer characters to show up well in the legend
-pioreactor1=high
-pioreactor3=medium
+pioreactor1=EYL1
+pioreactor3=EYL2
 
 [pid_morbidostat]
 Kp=5
