get tests working again

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -31,6 +31,10 @@ observation_database=pioreactor.sqlite3
 [logging]
 log_file=./pioreactor.log
 
+# logs in MQTT end up in the database and on the UI
+# See Python's logging module for possible values
+mqtt_log_level=INFO
+
 [network.topology]
 leader_hostname=localhost
 
