get tests working again

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -53,12 +53,12 @@ pioreactor2=1
 pioreactor3=0
 
 
-[dashboard.settings]
+[ui.overview.settings]
 filtered_od_lookback_minutes=240
 raw__od_lookback_minutes=240
 log_display_count=65
 
-[dashboard.rename]
+[ui.overview.rename]
 pioreactor1=experiment
 pioreactor2=control
 
