kinda shitty duplictation here; allow hostname set from arguments

--- a/config.ini
+++ b/config.ini
@@ -51,6 +51,7 @@ pioreactor2=192.168.0.2
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 pioreactor1=1
 pioreactor2=1
+pioreactor3=1
 
 
 [ui.overview.settings]
@@ -76,8 +77,8 @@ event_logs=1
 [ui.overview.rename]
 # rename the units on the dashboard
 # ideally 8 or fewer characters to show up well in the legend
-pioreactor1=EYL1
-pioreactor3=EYL2
+pioreactor1=YL
+pioreactor3=No YL
 
 [pid_morbidostat]
 Kp=5
