--- a/config.ini
+++ b/config.ini
@@ -52,7 +52,12 @@ pioreactor2=192.168.0.2
 pioreactor1=1
 pioreactor2=1
 pioreactor3=1
-
+pioreactor4=1
+pioreactor5=1
+pioreactor6=1
+pioreactor7=1
+pioreactor8=1
+pioreactor9=1
 
 [ui.overview.settings]
 # changing these may require a power cycle of the leader unit.
@@ -77,8 +82,7 @@ event_logs=1
 [ui.overview.rename]
 # rename the units on the dashboard
 # ideally 8 or fewer characters to show up well in the legend
-pioreactor1=YL
-pioreactor3=No YL
+
 
 [pid_morbidostat]
 Kp=5
