OD variance is a config param

--- a/config.example.ini
+++ b/config.example.ini
@@ -71,7 +71,6 @@ event_logs=1
 # rename the units on the dashboard
 # ideally 8 or fewer characters to show up well in the legend
 
-
 [pid_morbidostat]
 Kp=5
 Ki=0
@@ -83,4 +82,7 @@ Ki=0.1
 Kd=0.1
 
 [growth_rate_kalman]
-rate_variance=0.0050
+# this controls the variance in the rate position Q matrix. Higher values => more sensitive.
+rate_variance=0.01
+# this controls the variance in all the OD positions in the Q matrix.
+od_variance=0.01
