testing out new static client for publishing

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -48,7 +48,7 @@ pioreactor4=192.168.0.4
 
 
 [inventory]
-pioreactor1=1
+testing_unit=1
 pioreactor2=1
 pioreactor3=0
 
@@ -69,3 +69,4 @@ Kd=0
 
 [growth_rate_kalman]
 rate_variance=0.0050
+od_variance=0.0050
