--- a/config.example.ini
+++ b/config.example.ini
@@ -82,7 +82,7 @@ Ki=0.1
 Kd=0.1
 
 [growth_rate_kalman]
-# this controls the variance in the rate position Q matrix. Higher values => more sensitive.
+# this controls the variance in the rate position Q matrix. Higher values => more sensitive rate.
 rate_variance=0.01
-# this controls the variance in all the OD positions in the Q matrix.
+# this controls the variance in all the OD positions in the Q matrix. Higher values => less confidence in observations (i.e. we expects lots of noise)
 od_variance=0.005
