proper db backups (and as actions)

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -27,7 +27,7 @@ samples_per_second=0.2
 
 
 [storage]
-observation_database=pioreactor.sqlite3
+database=pioreactor.sqlite3
 
 [logging]
 log_file=./pioreactor.log
