--- a/config.example.ini
+++ b/config.example.ini
@@ -1,7 +1,8 @@
 [rpi_pins]
-waste=27
-alt_media=17
-fan=4
+waste=12
+alt_media=16
+media=18
+fan=6
 tactile_button=24
 led=23
 
@@ -23,7 +24,7 @@ samples_per_second=0.2
 
 [storage]
 # the UI looks here, too.
-observation_database=/home/pi/db/pioreactor.sqlite
+database=/home/pi/db/pioreactor.sqlite
 
 [logging]
 # where, on each Rpi, to store the logs
@@ -86,3 +87,9 @@ Kd=0.1
 rate_variance=0.01
 # this controls the variance in all the OD positions in the Q matrix. Higher values => less confidence in observations (i.e. we expects lots of noise)
 od_variance=0.005
+
+
+[error_reporting]
+# This enables sending error logs back to us developers at Pioreactor. We can build a better
+# product with this enabled (switch to 1 to enable sending, 0 to disable any sending)
+send_to_Pioreactor_com=0
