big refactor: rename io_controlling, move dosing alg to their own dir

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -6,9 +6,11 @@ fan=4
 tactile_button=24
 led=23
 
+[leds]
+ir_led=A
+
 
 [pump_calibration]
-
 media_ml_calibration_testing_unit={"duration_": 1}
 waste_ml_calibration_testing_unit={"duration_": 1}
 alt_media_ml_calibration_testing_unit={"duration_": 1}
@@ -66,6 +68,11 @@ pioreactor2=control
 Kp=5
 Ki=0
 Kd=0
+
+[pid_turbidostat]
+Kp=1
+Ki=1
+Kd=1
 
 [growth_rate_kalman]
 rate_variance=0.0050
