remove ipynb files from the repo, small updates

--- a/config.example.ini
+++ b/config.example.ini
@@ -39,9 +39,6 @@ mqtt_log_level=INFO
 # In solo mode, this can be pioreactor1 (as an example)
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 
-[network.ips]
-
-
 [inventory]
 # This controls what's available to be used as workers, i.e. what `pios` will talk to.
 # This also controls what shows up in the dashboard as active
@@ -70,7 +67,7 @@ event_logs=1
 
 [ui.overview.rename]
 # rename the units on the dashboard
-# ideally 8 or fewer characters to show up well in the legend
+# ideally 8 or fewer characters to show up well in the chart legend
 
 [pid_morbidostat]
 Kp=5
