--- a/config.dev.ini
+++ b/config.dev.ini
@@ -1,10 +1,9 @@
-[rpi_pins]
-media=22
-waste=27
-alt_media=17
-fan=4
-tactile_button=24
-led=23
+[PWM]
+# map the externals to the PWM
+fan=0
+alt_media=2
+waste=3
+media=4
 
 [leds]
 ir_led=A
