--- a/config.example.ini
+++ b/config.example.ini
@@ -1,12 +1,14 @@
-[rpi_pins]
-waste=12
-alt_media=16
-media=18
-fan=6
-tactile_button=24
-led=23
+[PWM]
+# map the externals to the PWM
+fan=0
+alt_media=2
+waste=3
+media=4
+
 
 [bioreactor]
+# obviously changing this isn't going to change the size of the glass
+# vial, but if you wanted to create a new, larger, bioreactor...
 volume_ml=14
 
 [pump_calibration]
@@ -21,6 +23,9 @@ od_angle_channel=135,0|135,3
 
 [od_config.od_sampling]
 samples_per_second=0.2
+
+[leds]
+ir_led=A
 
 [storage]
 # the UI looks here, too.
