some config.ini improvements; add testing for led algos

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -7,6 +7,7 @@ media=4
 
 [leds]
 ir_led=A
+white_light=B
 
 
 [pump_calibration]
@@ -20,7 +21,7 @@ volume_ml=14
 [stirring]
 duty_cycle_testing_unit=50
 
-[od_config.sensor_to_adc_pin]
+[od_config.photodiode_channel]
 od_angle_channel=135,0
 
 [od_config.od_sampling]
