--- a/config.example.ini
+++ b/config.example.ini
@@ -5,25 +5,24 @@ alt_media=2
 waste=3
 media=4
 
-
-[bioreactor]
-# obviously changing this isn't going to change the size of the glass
-# vial, but if you wanted to create a new, larger, bioreactor...
-volume_ml=14
+[leds]
+ir_led=A
 
 [pump_calibration]
 
 [stirring]
 
-[od_config.sensor_to_adc_pin]
-# Defaults. Use a | character to separate them, ex: 135,0|135,3
-od_angle_channel=135,0|135,3
+[od_config.photodiode_channel]
+# Defaults. Use a | character to separate them, ex: 135,A|135,B
+od_angle_channel=135,A|135,B
 
 [od_config.od_sampling]
 samples_per_second=0.2
 
-[leds]
-ir_led=A
+[bioreactor]
+# obviously changing this isn't going to change the size of the glass
+# vial, but if you wanted to create a new, larger, bioreactor...
+volume_ml=14
 
 [storage]
 # the UI looks here, too.
