--- a/startup/systemd/ngrok.service
+++ b/startup/systemd/ngrok.service
@@ -1,14 +1,9 @@
 [Unit]
-Description=ngrok
+Description=start ngrok on startup
 After=network.target
 
 [Service]
 ExecStart=/opt/ngrok/ngrok start ssh ui ws --config /opt/ngrok/ngrok.yml
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
-IgnoreSIGPIPE=true
-Restart=always
-RestartSec=300
 Type=simple
 
 [Install]
