split logging up; now there is a specific log topic for the PioreactorUI, and a specific topic for logs that will go to the DB. The latter is at level DEBUG, so all logs from all units should end up in the db

--- a/config.example.ini
+++ b/config.example.ini
@@ -32,9 +32,11 @@ database=/home/pi/db/pioreactor.sqlite
 # where, on each Rpi, to store the logs
 log_file=/var/log/pioreactor.log
 
-# logs in MQTT end up in the database and on the UI
 # See Python's logging module for possible values
-mqtt_log_level=INFO
+# logs in MQTT end up in the database
+mqtt_log_level=DEBUG
+# logs also appear in the UI
+ui_log_level=INFO
 
 [network.topology]
 # should be a hostname defined in [network.ips]
