--- a/config.example.ini
+++ b/config.example.ini
@@ -39,8 +39,7 @@ mqtt_log_level=DEBUG
 ui_log_level=INFO
 
 [network.topology]
-# should be a hostname defined in [network.ips]
-# In solo mode, this can be pioreactor1 (as an example)
+# should be a hostname defined on the network
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 
 [inventory]
