new arch for od_reading: I've seperated OD reading from ADS reading (the former is a now a very thing wrapper that listens to topics from the ADS reading, and relabels from for later downstream analysis

--- a/config.example.ini
+++ b/config.example.ini
@@ -13,8 +13,8 @@ ir_led=A
 [stirring]
 
 [od_config.photodiode_channel]
-# Defaults. Use a | character to separate them, ex: 135,A|135,B
-od_angle_channel=135,A|135,B
+# Defaults. Use a | character to separate them, ex: 135,0|135,1
+od_angle_channel=135,0|135,1
 
 [od_config.od_sampling]
 samples_per_second=0.2
