--- a/config.dev.ini
+++ b/config.dev.ini
@@ -37,6 +37,7 @@ log_file=./pioreactor.log
 # logs in MQTT end up in the database and on the UI
 # See Python's logging module for possible values
 mqtt_log_level=INFO
+ui_log_level=DEBUG
 
 [network.topology]
 leader_hostname=localhost
