--- a/config.example.ini
+++ b/config.example.ini
@@ -93,3 +93,8 @@ od_variance=0.005
 # This enables sending error logs back to us developers at Pioreactor. We can build a better
 # product with this enabled (switch to 1 to enable sending, 0 to disable any sending)
 send_to_Pioreactor_com=0
+
+[remote]
+# see docs at
+ws_url=
+ngrok_authtoken=
