update ADS to use base job more

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -10,6 +10,12 @@ ir_led=A
 white_light=B
 
 
+[pd_inputs]
+pd_A=0
+pd_B=1
+
+
+
 [pump_calibration]
 media_ml_calibration_testing_unit={"duration_": 1}
 waste_ml_calibration_testing_unit={"duration_": 1}
