adding gli2 as an test

--- a/config.example.ini
+++ b/config.example.ini
@@ -12,6 +12,14 @@ ir_led=A
 
 [stirring]
 
+
+[gli2]
+ir_led_X=
+ir_led_Y=
+pd_X=
+pd_Y=
+
+
 [od_config.photodiode_channel]
 # Defaults. Use a | character to separate them, ex: 135,0|135,1
 od_angle_channel=135,0|135,1
