--- a/config.example.ini
+++ b/config.example.ini
@@ -50,11 +50,17 @@ ui_log_level=INFO
 # should be a hostname defined on the network
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 
-[inventory]
+[network.inventory]
 # This controls what's available to be used as workers, i.e. what `pios` will talk to.
 # This also controls what shows up in the dashboard as active
 # a 1 means available, and a 0 means not available.
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
+
+
+[ui]
+# the UI will be available at the below alias, and <leader_hostname>.local
+url_alias=pioreactor.local
+
 
 [ui.overview.settings]
 # changing these may require a power cycle of the leader unit.
@@ -76,8 +82,8 @@ raw_optical_density=1
 dosings=1
 event_logs=1
 
-[ui.overview.rename]
-# rename the units on the dashboard
+[ui.rename]
+# rename the units in the UI
 # ideally 8 or fewer characters to show up well in the chart legend
 
 [pid_morbidostat]
