adding -t to pio mqtt; fix growth rate

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -48,15 +48,7 @@ ui_log_level=DEBUG
 [network.topology]
 leader_hostname=localhost
 
-[network.ips]
-leader=192.168.0.100
-pioreactor1=192.168.0.1
-pioreactor2=192.168.0.2
-pioreactor3=192.168.0.3
-pioreactor4=192.168.0.4
-
-
-[inventory]
+[network.inventory]
 testing_unit=1
 pioreactor2=1
 pioreactor3=0
@@ -67,7 +59,7 @@ filtered_od_lookback_minutes=240
 raw__od_lookback_minutes=240
 log_display_count=65
 
-[ui.overview.rename]
+[ui.rename]
 pioreactor1=experiment
 pioreactor2=control
 
