--- a/config.example.ini
+++ b/config.example.ini
@@ -1,3 +1,5 @@
+# See documentation for this file at https://pioreactor.com/pages/configuration-via-config-ini
+
 [PWM]
 # map the externals to the PWM
 stirring=0
