fix GPIO mappings (need to dbl check) and made ctrl-c on pumps better

--- a/config.example.ini
+++ b/config.example.ini
@@ -51,6 +51,8 @@ ui_log_level=INFO
 [network.topology]
 # should be a hostname defined on the network
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
+leader_hostname=
+leader_address=
 
 [network.inventory]
 # This controls what's available to be used as workers, i.e. what `pios` will talk to.
