need subjobs to be defined always; even if not used

--- a/config.example.ini
+++ b/config.example.ini
@@ -23,7 +23,10 @@ pd_Y=
 
 
 [od_config.photodiode_channel]
-# Defaults. Use a | character to separate them, ex: 135,0|135,1
+# Default photodiode channel to use, with it's angle relative to the IR LED.
+# Only allowable channels are one of {0,1,2,3}
+# Only valid angles are one of {45,90,135,180}
+# Use a | character to separate them, ex: 135,0|135,1
 od_angle_channel=135,0|135,1
 
 [od_config.od_sampling]
