adding channel to OD db tables; because multiple channels could use the same angle, we needed additionally channel to differentiate; testing out hotswap in json dumping (see comment for why); due to the set level in logging sqliteworker, I wasn't seeing SQL errors (causing me to lose data)

--- a/config.example.ini
+++ b/config.example.ini
@@ -65,14 +65,16 @@ leader_address=
 
 
 [ui]
-# the UI will be available at the below alias, and <leader_hostname>.local
+# the UI will be available at the below alias, along with <leader_hostname>.local
+# note - it must end in .local, and subdomains are not allowed.
 url_alias=pioreactor.local
 
 
 [ui.overview.settings]
 # changing these may require a power cycle of the leader unit.
-filtered_od_lookback_minutes=240
-raw_od_lookback_minutes=240
+# (specifically, restart the time_series_aggregating job)
+filtered_od_lookback_minutes=10000
+raw_od_lookback_minutes=10000
 log_display_count=65
 
 [ui.overview.charts]
@@ -91,7 +93,7 @@ event_logs=1
 
 [ui.rename]
 # rename the units in the UI
-# ideally 8 or fewer characters to show up well in the chart legend
+# ideally 10 or fewer characters to show up well in the chart legend
 
 [pid_morbidostat]
 Kp=5
