--- a/startup/systemd/ngrok.yml
+++ b/startup/systemd/ngrok.yml
@@ -9,8 +9,10 @@ tunnels:
     addr: 80
     subdomain: pioreactor
     inspect: false
+    bind_tls: false
   ws:
     proto: http
     addr: 9001
     subdomain: pioreactorws
     inspect: false
+    bind_tls: false
